Opera fixes, and IE 7 warning script removed - added to page.tpl.php

--- a/sites/all/themes/cp_theme/cp-theme.css
+++ b/sites/all/themes/cp_theme/cp-theme.css
@@ -352,3 +352,7 @@ p {
 .view-vsite-news-follow-candidate .unflag-action {
   color: #000;
   }
+
+#main-content #cp-content .frame, #main-content #cp-content .innerframe {
+  position: static;
+  }
