--- a/sites/all/themes/scholar_theme_01/scholar-theme-01.css
+++ b/sites/all/themes/scholar_theme_01/scholar-theme-01.css
@@ -93,7 +93,7 @@ body.sidebar-left #footer, body.two-sidebars #footer {
 /* HEADER ELEMENTS */
 
 #navbar {
-  margin-top: 21px;
+  padding-top: 14px;
   }
 
 body.navbar-on #header {
