--- a/sites/all/themes/scholar_theme_07/flavors/asian_leaves/asian_leaves.css
+++ b/sites/all/themes/scholar_theme_07/flavors/asian_leaves/asian_leaves.css
@@ -11,6 +11,10 @@ body {
   background-image: url(images/header-asian-leaves.png);
   }
 
+a, a:visited {
+  color:#C74235;
+  }
+
 #navbar li a:hover, #navbar li a.active, #navbar .active-trail a {
   background: #c74336;
   }
