--- a/sites/all/themes/scholar_theme_07/flavors/devils_eye/devils_eye.css
+++ b/sites/all/themes/scholar_theme_07/flavors/devils_eye/devils_eye.css
@@ -1,6 +1,6 @@
 body {
   background-image: url(images/fabric-strip-devil-eye.png);
-  background-color: #883423;
+  background-color: #6c5652;
   }
 
 #wrapper {
@@ -9,6 +9,10 @@ body {
 
 #container {
   background-image: url(images/header-devil-eye.png);
+  }
+
+a, a:visited {
+  color:#833426;
   }
 
 #navbar li a, #navbar li a:visited {
