--- a/sites/all/themes/scholar_theme_07/flavors/floral_pattern/floral_pattern.css
+++ b/sites/all/themes/scholar_theme_07/flavors/floral_pattern/floral_pattern.css
@@ -11,6 +11,10 @@ body {
   background-image: url(images/header-floral-pattern.png);
   }
 
+a, a:visited {
+  color:#8B0D09;
+  }
+
 #navbar li a, #navbar li a:visited {
   color: #fff;
   }
