--- a/sites/all/themes/scholar_theme_07/flavors/grungy_green/grungy_green.css
+++ b/sites/all/themes/scholar_theme_07/flavors/grungy_green/grungy_green.css
@@ -11,6 +11,10 @@ body {
   background-image: url(images/header-grungy-green.png);
   }
 
+a, a:visited {
+  color: #898F47;
+  }
+
 #navbar li a, #navbar li a:visited {
   color: #212519;
   }
