--- a/sites/all/themes/scholar_theme_07/flavors/modern_white/modern_white.css
+++ b/sites/all/themes/scholar_theme_07/flavors/modern_white/modern_white.css
@@ -1,6 +1,6 @@
 body {
   background-image: url(images/fabric-strip-modern-white.png);
-  background-color: #464441;
+  background-color: #414141;
   }
 
 #wrapper {
@@ -9,6 +9,10 @@ body {
 
 #container {
   background-image: url(images/header-modern-white.png);
+  }
+
+a, a:visited {
+  color: #57737F;
   }
 
 #navbar li a, #navbar li a:visited {
