--- a/sites/all/themes/scholar_theme_09/scholar-theme-09.css
+++ b/sites/all/themes/scholar_theme_09/scholar-theme-09.css
@@ -69,8 +69,8 @@ h2.title {
 /* LAYOUT ELEMENTS */
 
 #sidebar-left, #sidebar-right {
-  font-size: 10px;
-  line-height: 1.5em;
+  font-size: 11px;
+  line-height: 1.3em;
   font-variant: small-caps;
   }
 
@@ -88,6 +88,7 @@ h2.title {
 #sidebar-right {
   width: 100px;
   padding-right:35px;
+  padding-left: 5px;
   }
 
 #content-wrapper, body.sidebar-left #content-wrapper,  body.sidebar-right #content-wrapper {
