--- a/sites/all/themes/scholar_theme_03/scholar-theme-03.css
+++ b/sites/all/themes/scholar_theme_03/scholar-theme-03.css
@@ -154,13 +154,13 @@ body.navbar-off #header {
 #navbar {
   height: 40px;
   line-height: 40px;
-  margin-top: 19px;
+  padding-top: 14px;
   }
 
 #navbar li {
     margin-right: 1.5em;
     text-transform: uppercase;
-    font-size: 1.1em;
+    font-size: 17px;
     }
 
 #navbar li a, #navbar li a:visited {
