--- a/sites/all/themes/scholar_theme_07/flavors/mesh/mesh.css
+++ b/sites/all/themes/scholar_theme_07/flavors/mesh/mesh.css
@@ -11,6 +11,10 @@ body {
   background-image: url(images/header-mesh.png);
   }
 
+a, a:visited {
+  color:#A8AF57;
+  }
+
 #header, #header h1, #header h2, #header h3, #header a, #header a:visited, #header h1 a, #header h1 a:visited, #navbar li a, #navbar li a:visited {
   color: #393933;
   }
