--- a/sites/all/modules/vsite/vsite_layout/theme/vsite_layout.css
+++ b/sites/all/modules/vsite/vsite_layout/theme/vsite_layout.css
@@ -1,16 +1,16 @@
 #scholarlayout-container {
   width: 848px;
   height: 711px;
-  /* background: url(images/layout-map.png) no-repeat #fff 0 0; */
+  background: url(images/layout-map.png) no-repeat #fff 0 0;
   position: relative;
   margin-left: 17px;
   margin-top: 0;
   }
 
 #scholarlayout-container .scholarlayout-widgets-list {
-  /* position: absolute; */
-  width: 100%;
-  height: 100%;
+  position: absolute;
+  width: 202px;
+  height: 121px;
   top: 26px;
   left: 42px;
   padding: 0;
@@ -21,7 +21,7 @@
   background: #c4e5a3;
   }
 
-/*
+
 #scholarlayout-container #scholarlayout-header-main, #scholarlayout-container #scholarlayout-content-main {
   width: 244px;
   left: 247px;
@@ -46,21 +46,12 @@
   top: 150px;
   }
 
-
  #scholarlayout-container #scholarlayout-footer {
   top: 541px;
   height: 42px;
   left: 43px;
   }
-*/
 
-#scholarlayout-container table,#scholarlayout-container th,#scholarlayout-container td{
-  border: 2px solid grey;
-}
-
-#scholarlayout-container table{
-	width: 660px;
-}
 
 #scholarlayout-top-widgets {
   height:114px;
