--- a/sites/all/modules/vsite/vsite_layout/theme/vsite_layout.css
+++ b/sites/all/modules/vsite/vsite_layout/theme/vsite_layout.css
@@ -1,7 +1,7 @@
 #scholarlayout-container {
   width: 848px;
   height: 711px;
-  background: url(images/layout-map.png) no-repeat #fff 0 0;
+  /*background: url(images/layout-map.png) no-repeat #fff 0 0;*/
   position: relative;
   margin-left: 17px;
   margin-top: 0;
@@ -15,6 +15,7 @@
   left: 42px;
   padding: 0;
   margin: 0;
+  border: 2px solid grey;
   }
 
 #scholarlayout-container .scholarlayout-widgets-list:hover {
