changed content to content-main

--- a/sites/all/modules/vsite/vsite_layout/theme/vsite_layout.css
+++ b/sites/all/modules/vsite/vsite_layout/theme/vsite_layout.css
@@ -1,6 +1,6 @@
 #scholarlayout-container {
   width: 848px;
-  height: 575px;
+  height: 559px;
   position: relative;
   margin-left: 0;
   margin-top: 20px;
@@ -11,11 +11,16 @@
   position: absolute;
   padding: 0;
   margin: 0;
-  border: 1px dashed #babbbb;
+  border: 1px dashed #888;
   }
 
 #scholarlayout-container .scholarlayout-widgets-list:hover {
   background: #eff6f6;
+  }
+
+#scholarlayout-container #scholarlayout-content-main,
+#scholarlayout-container #scholarlayout-footer {
+  background: #efefef;
   }
 
 #scholarlayout-top-widgets {
@@ -134,11 +139,13 @@ li.scholarlayout-item .close-this {
 #edit-settings-layout-page-type-wrapper  {
   position: relative;
   height: 37px;
+
   }
 
 #edit-settings-layout-page-type-wrapper label,
 #edit-settings-layout-page-type-wrapper .description {
   color: #fff;
+  background:#666f7a;
   }
 
 
