--- a/sites/all/modules/vsite/vsite_layout/theme/cp-layout-map.css
+++ b/sites/all/modules/vsite/vsite_layout/theme/cp-layout-map.css
@@ -1,36 +1,38 @@
 #scholarlayout-container .scholarlayout-widgets-list {
   width: 202px;
   height: 121px;
-  top: 26px;
-  left: 42px;
+  top: 0;
+  left: 0;
   }
 
-#scholarlayout-container #scholarlayout-header-main, #scholarlayout-container #scholarlayout-content-main {
-  width: 244px;
-  left: 247px;
+#scholarlayout-container #scholarlayout-header-main,
+#scholarlayout-container #scholarlayout-content-main {
+  width: 428px;
+  left: 209px;
   }
 
 #scholarlayout-container #scholarlayout-header-right,
 #scholarlayout-container #scholarlayout-right {
-  left: 493px;
+  left: auto;
+  right: 0;
   }
 
 #scholarlayout-container #scholarlayout-content-main,
 #scholarlayout-container #scholarlayout-left,
 #scholarlayout-container #scholarlayout-right {
-  top: 182px;
-  height: 356px;
+  top: 170px;
+  height: 344px;
   }
 
-
-#scholarlayout-container #scholarlayout-navbar,#scholarlayout-container #scholarlayout-footer {
-  width: 653px;
-  height: 30px;
-  top: 150px;
+#scholarlayout-container #scholarlayout-navbar,
+#scholarlayout-container #scholarlayout-footer {
+  width: 846px;
+  height: 36px;
+  top: 128px;
   }
 
  #scholarlayout-container #scholarlayout-footer {
-  top: 541px;
-  height: 42px;
-  left: 43px;
+  bottom: 0;
+  top: auto;
+  left: 0;
   }
