--- a/sites/all/modules/vsite/vsite_layout/theme/vsite_layout.css
+++ b/sites/all/modules/vsite/vsite_layout/theme/vsite_layout.css
@@ -69,7 +69,7 @@ li.scholarlayout-item {
   }
 
 #scholarlayout-container li.scholarlayout-item:hover {
-  background-position: -502px 50%;
+  background-position: -850px 50%;
   background-color: #f8f9e2;
   }
 
@@ -112,6 +112,7 @@ li.scholarlayout-item .close-this {
   border-left: none;
   text-transform: capitalize;
   margin:0;
+  z-index: 10;
   }
 
 #scholarlayout-top-widgets .close-this {
