--- a/sites/all/modules/vsite/vsite_layout/theme/vsite_layout.css
+++ b/sites/all/modules/vsite/vsite_layout/theme/vsite_layout.css
@@ -18,8 +18,7 @@
   background: #eff6f6;
   }
 
-#scholarlayout-container #scholarlayout-content-main,
-#scholarlayout-container #scholarlayout-footer {
+#scholarlayout-container #scholarlayout-content-main {
   background: #efefef;
   }
 
