changing to dl structure

--- a/sites/all/modules/vsite/vsite_layout/theme/vsite_layout.css
+++ b/sites/all/modules/vsite/vsite_layout/theme/vsite_layout.css
@@ -14,6 +14,7 @@
   border: 1px dashed #888;
   }
 
+
 #scholarlayout-container .scholarlayout-widgets-list:hover {
   background: #eff6f6;
   }
@@ -36,7 +37,7 @@
   background:url(images/cp-settings-site.png) repeat-x 0 0 transparent;
   }
 
-li.scholarlayout-item {
+dd.scholarlayout-item {
   font-size: 15px;
   line-height: 1em;
   font-weight: bold;
@@ -45,7 +46,7 @@ li.scholarlayout-item {
   text-transform: capitalize;
   }
 
-#scholarlayout-top-widgets li.scholarlayout-item {
+#scholarlayout-top-widgets dd.scholarlayout-item {
   float: left;
   width: 118px;
   height: 21px;
@@ -58,7 +59,7 @@ li.scholarlayout-item {
 
   }
 
-#scholarlayout-container li.scholarlayout-item {
+#scholarlayout-container dd.scholarlayout-item {
   margin: 0;
   padding: 4px 20px 8px 31px;
   background: url(images/widget-placed-bg.png) no-repeat 0 50% #f0f3f3;
@@ -67,7 +68,7 @@ li.scholarlayout-item {
   border-bottom: 1px solid #444;
   }
 
-#scholarlayout-container li.scholarlayout-item:hover {
+#scholarlayout-container dd.scholarlayout-item:hover {
   background-position: -850px 50%;
   background-color: #f8f9e2;
   }
@@ -86,7 +87,7 @@ li.scholarlayout-item {
   background: url(images/arrow-aqua.png) no-repeat 100% 50%;
   }
 
-li.scholarlayout-item .close-this {
+dd.scholarlayout-item .close-this {
   position: absolute;
   top: 4px;
   right: 7px;
@@ -118,8 +119,8 @@ li.scholarlayout-item .close-this {
   display:none;
   }
 
-#scholarlayout-top-widgets li.disabled,
-#scholarlayout-container li.disabled {
+#scholarlayout-top-widgets dd.disabled,
+#scholarlayout-container dd.disabled {
   display:none;
 }
 
