improvements to layout map

--- a/sites/all/modules/vsite/vsite_layout/theme/vsite_layout.css
+++ b/sites/all/modules/vsite/vsite_layout/theme/vsite_layout.css
@@ -3,15 +3,15 @@
   height: 559px;
   position: relative;
   margin-left: 0;
-  margin-top: 20px;
-  overflow:hidden;
+  margin-top: 10px;
   }
 
 #scholarlayout-container .scholarlayout-widgets-list {
   position: absolute;
   padding: 0;
   margin: 0;
-  border: 1px dashed #888;
+  border: 1px dashed #5e819e;
+  background:#e8ebeb;
   }
 
 
@@ -19,7 +19,8 @@
   background: #eff6f6;
   }
 
-#scholarlayout-container #scholarlayout-content-main {
+#scholarlayout-container #scholarlayout-content-main,
+#scholarlayout-container #scholarlayout-footer {
   background: #efefef;
   }
 
@@ -34,7 +35,7 @@
 
 #cp-settings-site {
   padding-top: 10px;
-  background:url(images/cp-settings-site.png) repeat-x 0 0 transparent;
+  background:url(images/cp-settings-site.png) repeat-x 0 -22px transparent;
   }
 
 dd.scholarlayout-item {
@@ -160,7 +161,7 @@ dd.scholarlayout-item .close-this {
   }
 
 #cp-content .innerframe #cp-settings-form {
-  margin-top: 10px;
+  margin-top: 0;
   }
 
 #cp-settings-form .form-submit {
