--- a/sites/all/modules/vsite/vsite_layout/theme/vsite_layout.css
+++ b/sites/all/modules/vsite/vsite_layout/theme/vsite_layout.css
@@ -14,9 +14,19 @@
   background:#e8ebeb;
   }
 
+#scholarlayout-container dt {
+  margin-left: 8px;
+  color: #888;
+  }
 
 #scholarlayout-container .scholarlayout-widgets-list:hover {
   background: #eff6f6;
+  }
+
+#scholarlayout-container dl.active {
+  background: #eff6f6;
+  border: 2px solid #444;
+  margin: -1px;
   }
 
 #scholarlayout-container #scholarlayout-content-main,
@@ -66,6 +76,7 @@ dd.scholarlayout-item {
   background: url(images/widget-placed-bg.png) no-repeat 0 50% #f0f3f3;
   min-height: 21px;
   position:relative;
+  border-top: 1px solid #ccc;
   border-bottom: 1px solid #444;
   }
 
