brought back the white background (sorry Richard)

--- a/sites/all/modules/vsite/vsite_layout/theme/vsite_layout.css
+++ b/sites/all/modules/vsite/vsite_layout/theme/vsite_layout.css
@@ -12,7 +12,7 @@
   padding: 0;
   margin: 0;
   border: 1px dashed #5e819e;
-  background:#e8ebeb;
+  background:#fff;
   }
 
 #scholarlayout-container .scholarlayout-widgets-list:hover {
@@ -50,8 +50,7 @@
   z-index: 10;
   }
 
-#scholarlayout-container #scholarlayout-content-main,
-#scholarlayout-container #scholarlayout-footer {
+#scholarlayout-container #scholarlayout-content-main {
   background: #efefef;
   }
 
