--- a/sites/all/modules/vsite/vsite_taxonomy/theme/vsite_taxonomy.css
+++ b/sites/all/modules/vsite/vsite_taxonomy/theme/vsite_taxonomy.css
@@ -1,56 +1,67 @@
-#vsite-taxonomy-wrapper fieldset {
+#vsite-taxonomy-wrapper {
   clear: both;
   padding-bottom: 1em;
   margin-top: 2em;
-  width:600px;
   }
 
-#block-vsite_taxonomy-vsite_taxonomy0 {
-  border: none;
-  padding-top: 0;
-  margin-top: 0;
+#vsite-taxonomy-wrapper .row {
+  clear: both;
+  padding-bottom: 1.5em;
+  margin-bottom: 1.5em;
+  border-bottom: 1px solid #ccc;
+  width: 400px;
   }
 
-#vsite-taxonomy-wrapper legend {
-  font-size: 1.1em;
-  float: left;
-  width: 250px;
-  text-align: right;
+
+
+#vsite-taxonomy-wrapper h3 {
+  font-size: 1.2em;
+  margin-bottom: .5em;
   }
 
-#vsite-taxonomy-wrapper .item-list, .addcategory {
+.vsite-taxonomy-terms {
   padding-bottom: 2em;
-  margin-top: -15px;
-  margin-left: 260px;
   }
 
-#vsite-taxonomy-wrapper .item-list ul li {
+.item-list .vsite-taxonomy-terms li {
   list-style: none;
-  position: relative;
-  margin-bottom: 6px;
+  margin-bottom: .5em;
   margin-left: 0;
-  padding-left: 1.5em;
   }
 
-#vsite-taxonomy-wrapper .item-list ul li a {
+.vsite-taxonomy-terms li a {
   color: #5a5959;
   }
 
 #vsite-taxonomy-wrapper ul.admin {
-  position: relative;
   float: right;
-  top: 0;
+  padding-right: 40px;
   }
 
 #vsite-taxonomy-wrapper ul.admin li {
   float:left;
   margin-bottom: 0;
   padding-left: 3px;
+  padding-right: 0;
   }
 
+.add {
+  clear:both;
+ }
+
+#vsite-taxonomy-wrapper .description {
+  margin: 0;
+  padding: 0;
+  }
 
 .addcategory {
   clear: both;
   text-align:right;
-  margin-right: 29px
+  }
+
+
+#block-vsite_taxonomy-vsite_taxonomy0 {
+  border: none;
+  padding-top: 0;
+  margin-top: 0;
   }
