--- a/sites/all/modules/vsite/vsite_taxonomy/theme/vsite_taxonomy.css
+++ b/sites/all/modules/vsite/vsite_taxonomy/theme/vsite_taxonomy.css
@@ -29,13 +29,24 @@
   margin-left: 0;
   }
 
+.term-head {
+  padding: 2px;
+  }
+
+.item-list .vsite-taxonomy-terms li ul .term-head {
+  padding-left: 1.5em;
+  }
+
 .vsite-taxonomy-terms li a {
-  color: #5a5959;
+  color: #000;
   }
 
 #vsite-taxonomy-wrapper ul.admin {
   float: right;
   padding-right: 40px;
+  padding: 0;
+  margin: 0;
+  background: transparent;
   }
 
 #vsite-taxonomy-wrapper ul.admin li {
@@ -48,6 +59,10 @@
 .add {
   clear:both;
  }
+
+.term-head:hover {
+  background-color: #f8fade;
+  }
 
 #vsite-taxonomy-wrapper .description {
   margin: 0;
