--- a/sites/all/modules/vsite/vsite_taxonomy/theme/vsite_taxonomy.css
+++ b/sites/all/modules/vsite/vsite_taxonomy/theme/vsite_taxonomy.css
@@ -37,6 +37,10 @@
   padding-left: 1.5em;
   }
 
+.item-list .vsite-taxonomy-terms li ul ul .term-head {
+  padding-left: 3em;
+  }
+
 .vsite-taxonomy-terms li a {
   color: #000;
   }
