--- a/sites/all/modules/vsite/vsite/theme/jquery_ui/jquery.ui/themes/openscholar/ui.theme.css
+++ b/sites/all/modules/vsite/vsite/theme/jquery_ui/jquery.ui/themes/openscholar/ui.theme.css
@@ -10,10 +10,11 @@
 ----------------------------------*/
 .ui-dialog {
   background: #fff;
-  box-shadow: 0 10px 15px #999;
-  -moz-box-shadow:0 10px 15px #999999;
-  -webkit-box-shadow:0 10px 15px #999;
+  box-shadow: 0 10px 15px rgba(0, 0, 0, 0.5);
+  -moz-box-shadow:0 10px 15px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow:0 10px 15px rgba(0, 0, 0, 0.5);
   padding: 0 5px 15px 5px;
+  width:600px;
   }
 
 .ui-widget, .ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button {
