--- a/sites/all/modules/vsite/vsite/theme/vsite-admin-links.css
+++ b/sites/all/modules/vsite/vsite/theme/vsite-admin-links.css
@@ -2,11 +2,11 @@
   clear:both;
   }
 
-.vsite-admin .slider {
+.slider {
   display:none;
   }
 
-.vsite-admin .slider, .vsite-admin .toggle span {
+.slider, .toggle span {
   background:#eef3fb;
   border: 1px solid #dde2eb;
   color: #444;
@@ -14,11 +14,11 @@
   font: 12px/120% arial, sans-serif;
   }
 
-.vsite-admin .toggle {
+.toggle {
   display:inline;
   }
 
-.vsite-admin .toggle span {
+.toggle span {
   -moz-border-radius: 15px;
   -webkit-border-radius: 15px;
   margin: 0;
@@ -26,7 +26,7 @@
   cursor: pointer;
   }
 
-.vsite-admin .slider {
+.slider {
   margin-top: 6px;
   }
 
