--- a/sites/all/themes/cp_theme/forms.css
+++ b/sites/all/themes/cp_theme/forms.css
@@ -28,7 +28,7 @@ div.vertical-tabs ul.vertical-tabs-list {
 	float: left;
 	}
 
-.section-cp fieldset .og-vocab-taxonomy legend {
+.section-cp fieldset .og-vocab-taxonomy legend, #dialog-main legend {
   float: none;
   }
 
@@ -62,6 +62,10 @@ html.js #modal-content fieldset.collapsible .fieldset-wrapper {
 .section-cp div.form-item {
 	margin: 0 1em 0 0;
 	border: none;
+  }
+
+.section-cp #dialog-main div.form-item {
+  margin:0;
   }
 
 .views-exposed-form .views-exposed-widget {
