--- a/sites/all/modules/vsite/vsite_taxonomy/theme/vsite_taxonomy.css
+++ b/sites/all/modules/vsite/vsite_taxonomy/theme/vsite_taxonomy.css
@@ -65,7 +65,7 @@
  }
 
 .term-head:hover {
-  background-color: #f8fade;
+  background-color: #fff3b2;
   }
 
 #vsite-taxonomy-wrapper .description {
