--- a/sites/all/themes/scholar_base/scholar-base.css
+++ b/sites/all/themes/scholar_base/scholar-base.css
@@ -115,6 +115,13 @@ a, a:visited {
 	color: #005C9C;
 	}
 
+p.copy {
+  line-height: 29px;
+  width: 470px;
+  margin: 4px auto;
+  clear:both;
+  }
+
 p.copy a, p.copy a:visited {
   font-style: normal;
   text-decoration: none;
@@ -142,6 +149,19 @@ p.copy a.footer-login:hover {
 
 .marker, .form-required, ul.admin li a, ul.admin li a:visited, a.context-button, html.js div.ctools-dropdown a, .addcategory a {
   color: #cc0000 !important;
+  }
+
+
+p.copy #powered-link {
+  float: right;
+  }
+
+p.copy a.poweredby  {
+  background: url(images/poweredby.png);
+  text-indent:-999em;
+  display:block;
+  width:86px;
+  height:29px;
   }
 
 .nomarg {
