dataverse, garys site

--- a/sites/all/modules/vsite/vsite_layout/theme/vsite_layout.css
+++ b/sites/all/modules/vsite/vsite_layout/theme/vsite_layout.css
@@ -60,6 +60,7 @@
   width: 100%;
   padding-left: 22px;
   margin-bottom: 0;
+  overflow:hidden;
   }
 
 #cp-settings-site {
@@ -98,6 +99,11 @@ dd.scholarlayout-item {
   border-top: 1px solid #ccc;
   border-bottom: 1px solid #666;
   overflow:hidden;
+  }
+
+#scholarlayout-container #scholarlayout-footer dd.scholarlayout-item, #scholarlayout-container #scholarlayout-navbar dd.scholarlayout-item {
+  width: 282px;
+  float:left;
   }
 
 #scholarlayout-container dd.scholarlayout-item:hover {
